--- a/index.html
+++ b/index.html
@@ -18,29 +18,33 @@
     <h1 class="website-name">Vacation Packages</h1>
     <div class="container">
         <div class="card">
-            <h2 class="card-title">Gummy Bears</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
+            <h2 class="card-title">Luxurious Minecraft Villa</h2>
+            <img src="img/minecraft vacation place.webp" alt="Minecraft Villa" class="card-img">
+            <h3 class="card-price">While blocky, you sure won't have a "rocky" time here. Package starts at $299.</h3>
         </div>
         <div class="card">
-            <h2 class="card-title">Gummy Bears</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
+            <h2 class="card-title">Hungary</h2>
+            <img src="img/hungary.jfif" alt="Hungary" class="card-img">
+            <h3 class="card-price">Contrary to popular belief, people in Hungary are not "hungry." Package starts at a
+                $2.99 donation to the country.</h3>
         </div>
         <div class="card">
-            <h2 class="card-title">Gummy Bears</h2>
+            <h2 class="card-title">Hong Kong</h2>
             <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
+            <h3 class="card-price">Be warned, visiting this beautiful country will result in -900 social credit. Package
+                starts at $900</h3>
         </div>
         <div class="card">
-            <h2 class="card-title">Gummy Bears</h2>
+            <h2 class="card-title">Windows XP</h2>
             <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
+            <h3 class="card-price">Take a trip through time in this classic OS. With our patent pending Digitalizer®, we
+                can send you here. Package starts at $69.99.</h3>
         </div>
         <div class="card">
-            <h2 class="card-title">Gummy Bears</h2>
+            <h2 class="card-title">Room C56: Whalen's Domain</h2>
             <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
+            <h3 class="card-price">A perk of being in SITHS, you can experience Room C56 in it's entirety. Package
+                starts at $20,000.</h3>
         </div>
         <div class="card">
             <h2 class="card-title">Gummy Bears</h2>
