--- a/index.html
+++ b/index.html
@@ -30,39 +30,41 @@
         </div>
         <div class="card">
             <h2 class="card-title">Hong Kong</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
+            <img src="img/hong kong.jfif" alt="Hong Kong" class="card-img">
             <h3 class="card-price">Be warned, visiting this beautiful country will result in -900 social credit. Package
                 starts at $900</h3>
         </div>
         <div class="card">
             <h2 class="card-title">Windows XP</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
+            <img src="img/windows xp.jfif" alt="Windows XP" class="card-img">
             <h3 class="card-price">Take a trip through time in this classic OS. With our patent pending Digitalizer®, we
                 can send you here. Package starts at $69.99.</h3>
         </div>
         <div class="card">
             <h2 class="card-title">Room C56: Whalen's Domain</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
+            <img src="img/c56 domain.jfif" alt="C56" class="card-img">
             <h3 class="card-price">A perk of being in SITHS, you can experience Room C56 in it's entirety. Package
                 starts at $20,000.</h3>
         </div>
         <div class="card">
-            <h2 class="card-title">Gummy Bears</h2>
+            <h2 class="card-title">Paradise Palms from Fortnite</h2>
+            <img src="img/paradise palms.jfif" alt="Paradise Palms" class="card-img">
+            <h3 class="card-price">Paradise Palms is a classic must-visit for all people, with palm trees bigger than
+                buildings. Package starts at $4.99</h3>
+        </div>
+        <div class="card">
+            <h2 class="card-title">Heaven</h2>
+            <img src="img/heaven.jfif" alt="Heaven" class="card-img">
+            <h3 class="card-price">The pearly gates, something you will never see unless you repent for your sins.
+                Package starts at 1 prayer a day.</h3>
+        </div>
+        <div class="card">
+            <h2 class="card-title">Henriques' Room of Pain</h2>
             <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
             <h3 class="card-price">$2.99</h3>
         </div>
         <div class="card">
-            <h2 class="card-title">Gummy Bears</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
-        </div>
-        <div class="card">
-            <h2 class="card-title">Gummy Bears</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
-        </div>
-        <div class="card">
-            <h2 class="card-title">Gummy Bears</h2>
+            <h2 class="card-title">Lebron's House</h2>
             <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
             <h3 class="card-price">$2.99</h3>
         </div>
