--- a/index.html
+++ b/index.html
@@ -59,12 +59,31 @@
                 Package starts at 1 prayer a day.</h3>
         </div>
         <div class="card">
-            <h2 class="card-title">Henriques' Room of Pain</h2>
+            <h2 class="card-title">Rylan's VS Code</h2>
+            <img src="img/rylanpc.jpg" alt="Rylans PC" class="card-img">
+            <h3 class="card-price">Anything could be going on here, from a dumpster fire to a haven of code. Package
+                starts at one yellow sticky note.</h3>
+        </div>
+    </div>
+    <h2 class="section-name">And now, for our sponsors:</h2>
+    <div class="container">
+        <div class="card">
+            <h2 class="card-title">Yizhak Zoltan</h2>
             <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
             <h3 class="card-price">$2.99</h3>
         </div>
         <div class="card">
-            <h2 class="card-title">Lebron's House</h2>
+            <h2 class="card-title">something</h2>
+            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
+            <h3 class="card-price">$2.99</h3>
+        </div>
+        <div class="card">
+            <h2 class="card-title">something</h2>
+            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
+            <h3 class="card-price">$2.99</h3>
+        </div>
+        <div class="card">
+            <h2 class="card-title">something</h2>
             <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
             <h3 class="card-price">$2.99</h3>
         </div>
