--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
 
 <body>
-    <h1 class="website-name">Vacation Packages</h1>
     <div class="container">
+        <h1 class="website-name">Vacation Packages</h1>
+    </div>
+    <div class="container">
+
         <div class="card">
             <h2 class="card-title">Luxurious Minecraft Villa</h2>
             <img src="img/minecraft vacation place.webp" alt="Minecraft Villa" class="card-img">
@@ -65,7 +68,10 @@
                 starts at one yellow sticky note.</h3>
         </div>
     </div>
-    <h2 class="section-name">And now, for our sponsors:</h2>
+
+    <div class="container">
+        <h2 class="section-name">And now, for our sponsors:</h2>
+    </div>
     <div class="container">
         <div class="card">
             <h2 class="card-title">Yizhak Zoltan</h2>
