--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
     <div class="container">
         <div class="card">
             <h2 class="card-title">Yizhak Zoltan</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
+            <img src="img/zoltan.jpg" alt="Yizhak" class="card-img-people">
+            <h3 class="card-price"></h3>
         </div>
         <div class="card">
-            <h2 class="card-title">something</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
+            <h2 class="card-title">Tristian Botan</h2>
+            <img src="img/tristan.jpg" alt="Tristian" class="card-img-people">
+            <h3 class="card-price"></h3>
         </div>
         <div class="card">
-            <h2 class="card-title">something</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
+            <h2 class="card-title">Richard Masak</h2>
+            <img src="img/richard.jpg" alt="Richard" class="card-img-people">
+            <h3 class="card-price"></h3>
         </div>
         <div class="card">
-            <h2 class="card-title">something</h2>
-            <img src="img/gummybears.jpg" alt="Many Gummy Bears" class="card-img">
-            <h3 class="card-price">$2.99</h3>
+            <h2 class="card-title">Gabriel Liberov</h2>
+            <img src="img/liberov.jpg" alt="Gabriel" class="card-img-people">
+            <h3 class="card-price"></h3>
         </div>
     </div>
 </body>
