flexbox animation commit

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     </div>
     <div class="container">
 
-        <div class="card">
+        <div class="card-hover1">
             <h2 class="card-title">Luxurious Minecraft Villa</h2>
             <img src="img/minecraft vacation place.webp" alt="Minecraft Villa" class="card-img">
             <h3 class="card-price">While blocky, you sure won't have a "rocky" time here. Package starts at $299.</h3>
         </div>
-        <div class="card">
+        <div class="card-hover2">
             <h2 class="card-title">Hungary</h2>
             <img src="img/hungary.jfif" alt="Hungary" class="card-img">
             <h3 class="card-price">Contrary to popular belief, people in Hungary are not "hungry." Package starts at a
                 $2.99 donation to the country.</h3>
         </div>
-        <div class="card">
+        <div class="card-hover3">
             <h2 class="card-title">Hong Kong</h2>
             <img src="img/hong kong.jfif" alt="Hong Kong" class="card-img">
             <h3 class="card-price">Be warned, visiting this beautiful country will result in -900 social credit. Package
@@ -73,22 +73,22 @@
         <h2 class="section-name">And now, for our sponsors:</h2>
     </div>
     <div class="container">
-        <div class="card">
+        <div class="card-people">
             <h2 class="card-title">Yizhak Zoltan</h2>
             <img src="img/zoltan.jpg" alt="Yizhak" class="card-img-people">
             <h3 class="card-price"></h3>
         </div>
-        <div class="card">
+        <div class="card-people">
             <h2 class="card-title">Tristian Botan</h2>
             <img src="img/tristan.jpg" alt="Tristian" class="card-img-people">
             <h3 class="card-price"></h3>
         </div>
-        <div class="card">
+        <div class="card-people">
             <h2 class="card-title">Richard Masak</h2>
             <img src="img/richard.jpg" alt="Richard" class="card-img-people">
             <h3 class="card-price"></h3>
         </div>
-        <div class="card">
+        <div class="card-people">
             <h2 class="card-title">Gabriel Liberov</h2>
             <img src="img/liberov.jpg" alt="Gabriel" class="card-img-people">
             <h3 class="card-price"></h3>
