--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
             <h3 class="card-price">Take a trip through time in this classic OS. With our patent pending Digitalizer®, we
                 can send you here. Package starts at $69.99.</h3>
         </div>
-        <div class="card">
+        <div class="card-hover1">
             <h2 class="card-title">Room C56: Whalen's Domain</h2>
             <img src="img/c56 domain.jfif" alt="C56" class="card-img">
             <h3 class="card-price">A perk of being in SITHS, you can experience Room C56 in it's entirety. Package
                 starts at $20,000.</h3>
         </div>
-        <div class="card">
+        <div class="card-hover2">
             <h2 class="card-title">Paradise Palms from Fortnite</h2>
             <img src="img/paradise palms.jfif" alt="Paradise Palms" class="card-img">
             <h3 class="card-price">Paradise Palms is a classic must-visit for all people, with palm trees bigger than
                 buildings. Package starts at $4.99</h3>
         </div>
-        <div class="card">
+        <div class="card-hover3">
             <h2 class="card-title">Heaven</h2>
             <img src="img/heaven.jfif" alt="Heaven" class="card-img">
             <h3 class="card-price">The pearly gates, something you will never see unless you repent for your sins.
