--- a/index.html
+++ b/index.html
@@ -20,48 +20,48 @@
     </div>
     <div class="container">
 
-        <div class="card-hover1">
+        <div class="card" id="hover1">
             <h2 class="card-title">Luxurious Minecraft Villa</h2>
             <img src="img/minecraft vacation place.webp" alt="Minecraft Villa" class="card-img">
             <h3 class="card-price">While blocky, you sure won't have a "rocky" time here. Package starts at $299.</h3>
         </div>
-        <div class="card-hover2">
+        <div class="card" id="hover2">
             <h2 class="card-title">Hungary</h2>
             <img src="img/hungary.jfif" alt="Hungary" class="card-img">
             <h3 class="card-price">Contrary to popular belief, people in Hungary are not "hungry." Package starts at a
                 $2.99 donation to the country.</h3>
         </div>
-        <div class="card-hover3">
+        <div class="card" id="hover3">
             <h2 class="card-title">Hong Kong</h2>
             <img src="img/hong kong.jfif" alt="Hong Kong" class="card-img">
             <h3 class="card-price">Be warned, visiting this beautiful country will result in -900 social credit. Package
                 starts at $900</h3>
         </div>
-        <div class="card">
+        <div class="card" id="hover4">
             <h2 class="card-title">Windows XP</h2>
             <img src="img/windows xp.jfif" alt="Windows XP" class="card-img">
             <h3 class="card-price">Take a trip through time in this classic OS. With our patent pending Digitalizer®, we
                 can send you here. Package starts at $69.99.</h3>
         </div>
-        <div class="card-hover1">
+        <div class="card" id="hover1">
             <h2 class="card-title">Room C56: Whalen's Domain</h2>
             <img src="img/c56 domain.jfif" alt="C56" class="card-img">
             <h3 class="card-price">A perk of being in SITHS, you can experience Room C56 in it's entirety. Package
                 starts at $20,000.</h3>
         </div>
-        <div class="card-hover2">
+        <div class="card" id="hover2">
             <h2 class="card-title">Paradise Palms from Fortnite</h2>
             <img src="img/paradise palms.jfif" alt="Paradise Palms" class="card-img">
             <h3 class="card-price">Paradise Palms is a classic must-visit for all people, with palm trees bigger than
                 buildings. Package starts at $4.99</h3>
         </div>
-        <div class="card-hover3">
+        <div class="card" id="hover3">
             <h2 class="card-title">Heaven</h2>
             <img src="img/heaven.jfif" alt="Heaven" class="card-img">
             <h3 class="card-price">The pearly gates, something you will never see unless you repent for your sins.
                 Package starts at 1 prayer a day.</h3>
         </div>
-        <div class="card">
+        <div class="card" id="hover4">
             <h2 class="card-title">Rylan's VS Code</h2>
             <img src="img/rylanpc.jpg" alt="Rylans PC" class="card-img">
             <h3 class="card-price">Anything could be going on here, from a dumpster fire to a haven of code. Package
@@ -73,22 +73,22 @@
         <h2 class="section-name">And now, for our sponsors:</h2>
     </div>
     <div class="container">
-        <div class="card-people">
+        <div class="card" id="hover5">
             <h2 class="card-title">Yizhak Zoltan</h2>
             <img src="img/zoltan.jpg" alt="Yizhak" class="card-img-people">
             <h3 class="card-price"></h3>
         </div>
-        <div class="card-people">
+        <div class="card" id="hover5">
             <h2 class="card-title">Tristian Botan</h2>
             <img src="img/tristan.jpg" alt="Tristian" class="card-img-people">
             <h3 class="card-price"></h3>
         </div>
-        <div class="card-people">
+        <div class="card" id="hover5">
             <h2 class="card-title">Richard Masak</h2>
             <img src="img/richard.jpg" alt="Richard" class="card-img-people">
             <h3 class="card-price"></h3>
         </div>
-        <div class="card-people">
+        <div class="card" id="hover5">
             <h2 class="card-title">Gabriel Liberov</h2>
             <img src="img/liberov.jpg" alt="Gabriel" class="card-img-people">
             <h3 class="card-price"></h3>
