flexbox media query

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="card" id="hover2">
             <h2 class="card-title">Hungary</h2>
-            <img src="img/hungary.jfif" alt="Hungary" class="card-img">
+            <img src="img/hungary.jfif" alt="Hungary" class="card-img" id="hungary">
             <h3 class="card-price">Contrary to popular belief, people in Hungary are not "hungry." Package starts at a
                 $2.99 donation to the country.</h3>
         </div>
